Bug 1668875 - Invalidate images for media query changes more granularly. r=heycam

The SVG code invalidating too much causes hangs with pages that have
lots of SVGs.

Differential Revision: https://phabricator.services.mozilla.com/D94186