image/VectorImage.cpp
@@ -1556,20 +1556,16 @@ void VectorImage::MediaFeatureValuesChangedAllDocuments(
   }
 
   if (Document* doc = mSVGDocumentWrapper->GetDocument()) {
-    if (nsPresContext* presContext = doc->GetPresContext()) {
+    if (RefPtr<nsPresContext> presContext = doc->GetPresContext()) {
       presContext->MediaFeatureValuesChangedAllDocuments(aChange);
       // Media feature value changes don't happen in the middle of layout,
       // so we don't need to call InvalidateObserversOnNextRefreshDriverTick
       // to invalidate asynchronously.
-      //
-      // Ideally we would not invalidate images if the media feature value
-      // change did not cause any updates to the document, but since non-
-      // animated SVG images do not have their refresh driver ticked, it
-      // is the invalidation (and then the painting) which is what causes
-      // the document to be flushed. Theme and system metrics changes are
-      // rare, though, so it's not a big deal to invalidate even if it
-      // doesn't cause any change.
-      SendInvalidationNotifications();
+      if (presContext->FlushPendingMediaFeatureValuesChanged()) {
+        // NOTE(emilio): SendInvalidationNotifications flushes layout via
+        // VectorImage::CreateSurface -> FlushImageTransformInvalidation.
+        SendInvalidationNotifications();
+      }
     }
   }
 }
